--- a/webextension/browser-action/popup.html
+++ b/webextension/browser-action/popup.html
@@ -14,6 +14,10 @@
     <link rel="stylesheet" href="../libs/FortAwesome/Font-Awesome/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="./css/popup.css">
+
+    <script type="text/javascript" src="../libs/dov-utils.js"></script>
+    <script type="text/javascript" src="../core/js/config.js"></script>
+    <script type="text/javascript" src="./js/popup.js"></script>
 </head>
 <body>
     <div class="panel panel-default popup-dimensions">
@@ -32,7 +36,7 @@
                         <button class="btn btn-xs btn-primary btn-pin-this-item"><span class="glyphicon glyphicon-pushpin"></span></button>
                     </span>
                 </a>
-                <a class="list-group-item" href="#"><span class="glyphicon pull-left" aria-hidden="true" style="color: #CCCCCC"></span>&nbsp;&nbsp;Other <span class="glyphicon glyphicon-menu-right pull-right" aria-hidden="true"></span></a>
+                <a class="list-group-item" href="popup-list-all-search-engines.html"><span class="glyphicon pull-left" aria-hidden="true" style="color: #CCCCCC"></span>&nbsp;&nbsp;Other <span class="glyphicon glyphicon-menu-right pull-right" aria-hidden="true"></span></a>
             </div>
         </div>
     </div>
