Remove Accordion innerHtml That Gets Added Dynamically

--- a/webextension/browser-action/popup-list-all-search-engines.html
+++ b/webextension/browser-action/popup-list-all-search-engines.html
@@ -22,36 +22,7 @@
     </div>
 
     <div class="panel-group" id="accordion">
-        <div class="panel panel-default">
-            <div class="list-group status">
-                <button class="list-group-item btn btn-lg" data-toggle="collapse" data-parent="#accordion" href="#collapseFour">
-                    <span class="glyphicon glyphicon-file"></span>Reports
-                </button>
-            </div>
-
-            <div id="collapseFour" class="panel-collapse collapse in">
-                <div class="list-group">
-                    <button class="list-group-item">Test Button 1</button>
-                    <button class="list-group-item">Test Button 2</button>
-                    <button class="list-group-item">Test Button 3</button>
-                </div>
-            </div>
-        </div>
-        <div class="panel panel-default">
-            <div class="list-group status">
-                <button class="list-group-item btn btn-lg" data-toggle="collapse" data-parent="#accordion" href="#collapseFive">
-                    <span class="glyphicon glyphicon-file"></span>Cat3
-                </button>
-            </div>
-
-            <div id="collapseFive" class="panel-collapse collapse">
-                <div class="list-group">
-                    <button class="list-group-item">Test Button 1</button>
-                    <button class="list-group-item">Test Button 2</button>
-                    <button class="list-group-item">Test Button 3</button>
-                </div>
-            </div>
-        </div>
+        <!-- Dynamically add search engine listings here -->
     </div>
 </div>
 <script type="text/javascript" src="./js/popup.js"></script>
