style: Set Search List Panel Group Bottom Padding To 0

--- a/webextension/browser-action/popup-list-all-search-engines.html
+++ b/webextension/browser-action/popup-list-all-search-engines.html
@@ -21,7 +21,7 @@
         <a href="popup.html" style="font-size: medium;" class="list-group-item"><i class="fa fa-chevron-left"></i>&nbsp; BACK</a>
     </div>
 
-    <div class="panel-group" id="accordion">
+    <div class="panel-group" id="accordion" style="margin-bottom: 0px;">
         <!-- Dynamically add search engine listings here -->
     </div>
 </div>
