Search Input Saved To Local Storage And Clicking On Search List Button Uses User Input Search Query

--- a/webextension/browser-action/popup.html
+++ b/webextension/browser-action/popup.html
@@ -24,7 +24,7 @@
         <div class="panel-heading clearfix">
             <div class="form-group has-feedback has-feedback-left" style="margin-bottom: 0px;">
                 <i class="glyphicon glyphicon-search form-control-feedback"></i>
-                <input type="text" class="form-control" placeholder="Search" autofocus/>
+                <input id="main-search-keyword-input" type="text" class="form-control" placeholder="Search" autofocus/>
             </div>
         </div>
         <div class="panel-body" style="margin: 0px; padding: 0px; padding-bottom: 0px;">
