Add Unique IDs To Search Engines Dynamically On First Run

--- a/webextension/browser-action/popup.html
+++ b/webextension/browser-action/popup.html
@@ -28,14 +28,23 @@
             </div>
         </div>
         <div class="panel-body" style="margin: 0px; padding: 0px; padding-bottom: 0px;">
-            <div class="list-group" style="margin-bottom: 0px;">
-                <a href="#" class="list-group-item clearfix">
-                    <span class="glyphicon glyphicon-time text-muted"></span>
-                    MyWebSearch Stable
-                    <span class="pull-right">
+            <div class="list-group" id="featured-search-engines-list" style="margin-bottom: 0px;">
+                <div id="pinned-search-engines-list">
+                    <a href="#" class="list-group-item clearfix">
+                        <span class="glyphicon glyphicon-time text-muted"></span>
+                        MyWebSearch Stable
+                        <span class="pull-right">
                         <button class="btn btn-xs btn-primary btn-pin-this-item"><span class="glyphicon glyphicon-pushpin"></span></button>
                     </span>
-                </a>
+                    </a>
+                    <a href="#" class="list-group-item clearfix">
+                        <span class="glyphicon glyphicon-time text-muted"></span>
+                        MyWebSearch Stable
+                        <span class="pull-right">
+                        <button class="btn btn-xs btn-primary btn-pin-this-item"><span class="glyphicon glyphicon-pushpin"></span></button>
+                    </span>
+                    </a>
+                </div>
                 <a class="list-group-item" href="popup-list-all-search-engines.html"><span class="glyphicon pull-left" aria-hidden="true" style="color: #CCCCCC"></span>&nbsp;&nbsp;Other <span class="glyphicon glyphicon-menu-right pull-right" aria-hidden="true"></span></a>
             </div>
         </div>
