--- a/webextension/browser-action/popup.html
+++ b/webextension/browser-action/popup.html
@@ -30,20 +30,7 @@
         <div class="panel-body" style="margin: 0px; padding: 0px; padding-bottom: 0px;">
             <div class="list-group" id="featured-search-engines-list" style="margin-bottom: 0px;">
                 <div id="pinned-search-engines-list">
-                    <a href="#" class="list-group-item clearfix">
-                        <span class="glyphicon glyphicon-time text-muted"></span>
-                        MyWebSearch Stable
-                        <span class="pull-right">
-                        <button class="btn btn-xs btn-primary btn-pin-this-item"><span class="glyphicon glyphicon-pushpin"></span></button>
-                    </span>
-                    </a>
-                    <a href="#" class="list-group-item clearfix">
-                        <span class="glyphicon glyphicon-time text-muted"></span>
-                        MyWebSearch Stable
-                        <span class="pull-right">
-                        <button class="btn btn-xs btn-primary btn-pin-this-item"><span class="glyphicon glyphicon-pushpin"></span></button>
-                    </span>
-                    </a>
+                    <!-- Dynamically added nodes -->
                 </div>
                 <a class="list-group-item" href="popup-list-all-search-engines.html"><span class="glyphicon pull-left" aria-hidden="true" style="color: #CCCCCC"></span>&nbsp;&nbsp;Other <span class="glyphicon glyphicon-menu-right pull-right" aria-hidden="true"></span></a>
             </div>
