Change List All Categories Button To "All Categories"

--- a/webextension/browser-action/popup.html
+++ b/webextension/browser-action/popup.html
@@ -32,7 +32,7 @@
                 <div id="pinned-search-engines-list">
                     <!-- Dynamically added nodes -->
                 </div>
-                <a class="list-group-item" href="popup-list-all-search-engines.html"><span class="glyphicon pull-left" aria-hidden="true" style="color: #CCCCCC"></span>&nbsp;&nbsp;Other <span class="glyphicon glyphicon-menu-right pull-right" aria-hidden="true"></span></a>
+                <a class="list-group-item" href="popup-list-all-search-engines.html"><span class="glyphicon pull-left" aria-hidden="true" style="color: #CCCCCC"></span>&nbsp;&nbsp;All Categories <span class="glyphicon glyphicon-menu-right pull-right" aria-hidden="true"></span></a>
             </div>
         </div>
     </div>
