Replace Bootstrap `list-group` and `list-group-item`
with flexbox and custom CSS

--- a/webextension/browser-action/popup.html
+++ b/webextension/browser-action/popup.html
@@ -28,11 +28,11 @@
             </div>
         </div>
         <div class="panel-body" style="margin: 0px; padding: 0px; padding-bottom: 0px;">
-            <div class="list-group" id="featured-search-engines-list" style="margin-bottom: 0px;">
-                <div id="pinned-search-engines-list">
+            <!-- <div id="featured-search-engines-list" style="margin-bottom: 0px;"> -->
+                <div id="pinned-search-engines-list" class="main-pinned-box">
                     <!-- Dynamically added nodes -->
                 </div>
-            </div>
+            <!-- </div> -->
         </div>
     </div>
     <script type="text/javascript" src="./js/popup.js"></script>
