Replace `list-group` and `list-group-item` in popup-list-all-search-engines.html
with flexbox and custom CSS

--- a/webextension/browser-action/popup-list-all-search-engines.html
+++ b/webextension/browser-action/popup-list-all-search-engines.html
@@ -17,11 +17,11 @@
 </head>
 <body>
 <div class="panel panel-default popup-dimensions">
-    <div class="list-group status" style="margin-bottom: 0px;">
-        <a href="popup.html" style="font-size: medium;" class="list-group-item"><i class="fa fa-chevron-left"></i>&nbsp; BACK</a>
+    <div class="main-pinned-box">
+        <a href="popup.html" style="font-size: medium;" class="main-pinned-item app-nav-item"><i class="fa fa-chevron-left"></i>&nbsp; BACK</a>
     </div>
 
-    <div class="panel-group" id="accordion" style="margin-bottom: 0px;">
+    <div class="main-pinned-box" id="accordion">
         <!-- Dynamically add search engine listings here -->
     </div>
 </div>
