Replace Bootstrap's `panel-body` and `panel-heading`
with flexbox and custom CSS

--- a/webextension/browser-action/popup.html
+++ b/webextension/browser-action/popup.html
@@ -21,18 +21,14 @@
 </head>
 <body>
     <div class="panel panel-default popup-dimensions">
-        <div class="panel-heading clearfix">
+        <div class="search-box">
             <div class="form-group has-feedback has-feedback-left" style="margin-bottom: 0px;">
                 <i class="glyphicon glyphicon-search form-control-feedback"></i>
                 <input id="main-search-keyword-input" type="text" class="form-control" placeholder="Search Netflix Categories" autofocus/>
             </div>
         </div>
-        <div class="panel-body" style="margin: 0px; padding: 0px; padding-bottom: 0px;">
-            <!-- <div id="featured-search-engines-list" style="margin-bottom: 0px;"> -->
-                <div id="pinned-search-engines-list" class="main-pinned-box">
-                    <!-- Dynamically added nodes -->
-                </div>
-            <!-- </div> -->
+        <div id="pinned-search-engines-list" class="main-pinned-box">
+            <!-- Dynamically added nodes -->
         </div>
     </div>
     <script type="text/javascript" src="./js/popup.js"></script>
