Replace Bootstrap's `panel` with CSS Grid
in popup.js

--- a/webextension/browser-action/popup.html
+++ b/webextension/browser-action/popup.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="./js/popup.js"></script>
 </head>
 <body>
-    <div class="panel panel-default popup-dimensions">
+    <div class="search-view-container popup-dimensions">
         <div class="search-box">
             <div class="form-group has-feedback has-feedback-left" style="margin-bottom: 0px;">
                 <i class="glyphicon glyphicon-search form-control-feedback"></i>
