Replace Bootstrap's `form-group` and `form-control`
with custom CSS

--- a/webextension/browser-action/popup.html
+++ b/webextension/browser-action/popup.html
@@ -21,11 +21,9 @@
 </head>
 <body>
     <div class="search-view-container popup-dimensions">
-        <div class="search-box">
-            <div class="form-group has-feedback has-feedback-left" style="margin-bottom: 0px;">
-                <i class="glyphicon glyphicon-search form-control-feedback"></i>
-                <input id="main-search-keyword-input" type="text" class="form-control" placeholder="Search Netflix Categories" autofocus/>
-            </div>
+        <div class="search-box search-box-with-icon">
+            <i class="glyphicon glyphicon-search search-input-icon"></i>
+            <input id="main-search-keyword-input" type="text" class="search-input" placeholder="Search Netflix Categories" autofocus/>
         </div>
         <div id="pinned-search-engines-list" class="main-pinned-box">
             <!-- Dynamically added nodes -->
