Replace Glyphicons With Font Awesome Icons And Remove Bootstrap
from popup.html. Add custom CSS to compensate for removed Bootstrap library

--- a/webextension/browser-action/popup.html
+++ b/webextension/browser-action/popup.html
@@ -6,13 +6,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script type="text/javascript" src="../libs/jquery/dist/jquery.min.js"></script>
-
-    <link rel="stylesheet" href="../libs/twbs/bootstrap/dist/css/bootstrap.min.css">
-    <script type="text/javascript" src="../libs/twbs/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="../libs/FortAwesome/Font-Awesome/css/font-awesome.min.css">
-
     <link rel="stylesheet" href="./css/popup.css">
 
     <script type="text/javascript" src="../libs/dov-utils.js"></script>
@@ -22,7 +17,7 @@
 <body>
     <div class="search-view-container popup-dimensions">
         <div class="search-box search-box-with-icon">
-            <i class="glyphicon glyphicon-search search-input-icon"></i>
+            <i class="fa fa-search search-input-icon"></i>
             <input id="main-search-keyword-input" type="text" class="search-input" placeholder="Search Netflix Categories" autofocus/>
         </div>
         <div id="pinned-search-engines-list" class="main-pinned-box">
