Move Commonly Used Styles To A Separate File

--- a/webextension/browser-action/popup-list-all-search-engines.html
+++ b/webextension/browser-action/popup-list-all-search-engines.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../libs/twbs/bootstrap/dist/css/bootstrap.min.css">
     <script type="text/javascript" src="../libs/twbs/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <link rel="stylesheet" href="./css/ba-popup.css">
     <link rel="stylesheet" href="../libs/FortAwesome/Font-Awesome/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="./css/popup.css">
