--- a/webextension/browser-action/popup.html
+++ b/webextension/browser-action/popup.html
@@ -7,6 +7,7 @@
 <head>
     <meta charset="UTF-8">
 
+    <link rel="stylesheet" href="./css/ba-popup.css">
     <link rel="stylesheet" href="../libs/FortAwesome/Font-Awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/popup.css">
 </head>
