Use Separate Stylesheet For All Categories Page

--- a/webextension/browser-action/popup-list-all-search-engines.html
+++ b/webextension/browser-action/popup-list-all-search-engines.html
@@ -8,9 +8,8 @@
     <script type="text/javascript" src="../libs/twbs/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="./css/ba-popup.css">
+    <link rel="stylesheet" href="./css/ba-all-categories.css">
     <link rel="stylesheet" href="../libs/FortAwesome/Font-Awesome/css/font-awesome.min.css">
-
-    <link rel="stylesheet" href="./css/popup.css">
 
     <script type="text/javascript" src="../libs/dov-utils.js"></script>
     <script type="text/javascript" src="../core/js/config.js"></script>
