Remove Unused Bootstrap `panel` and `panel-default` Classes

--- a/webextension/browser-action/popup-list-all-search-engines.html
+++ b/webextension/browser-action/popup-list-all-search-engines.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="./js/popup-list-all-search-engines.js"></script>
 </head>
 <body>
-<div class="panel panel-default popup-dimensions">
+<div class="popup-dimensions">
     <div class="main-pinned-box">
         <a href="popup.html" style="font-size: medium;" class="main-pinned-item app-nav-item"><i class="fa fa-chevron-left"></i>&nbsp; BACK</a>
     </div>
