--- a/webextension/browser-action/popup-list-all-search-engines.html
+++ b/webextension/browser-action/popup-list-all-search-engines.html
@@ -13,8 +13,8 @@
 </head>
 <body>
 <div class="popup-dimensions">
-    <div class="main-pinned-box">
-        <a href="popup.html" style="font-size: medium;" class="main-pinned-item app-nav-item"><i class="fa fa-chevron-left"></i>&nbsp; BACK</a>
+    <div class="app-nav-box">
+        <a href="popup.html" style="font-size: medium;" class="app-nav-item"><i class="fa fa-chevron-left"></i>&nbsp; BACK</a>
     </div>
 
     <div class="main-pinned-box" id="accordion">
