--- a/webextension/browser-action/popup-list-all-search-engines.html
+++ b/webextension/browser-action/popup-list-all-search-engines.html
@@ -17,7 +17,7 @@
         <a href="popup.html" style="font-size: medium;" class="app-nav-item"><i class="fa fa-chevron-left"></i>&nbsp; BACK</a>
     </div>
 
-    <div class="main-pinned-box" id="accordion">
+    <div class="main-pinned-box below-back-btn" id="accordion">
         <!-- Dynamically add search engine listings here -->
     </div>
 </div>
