Add Updated Whats New Footer

--- a/webextension/browser-action/popup.html
+++ b/webextension/browser-action/popup.html
@@ -20,6 +20,10 @@
         <div id="pinned-search-engines-list" class="main-pinned-box">
             <!-- Dynamically added nodes -->
         </div>
+
+        <footer>
+            Updated! Whats new?
+        </footer>
     </div>
 
     <script type="text/javascript" src="../libs/dov-utils.js"></script>
