Replace FontAwesome With Fontello Icons In popup.html

--- a/webextension/browser-action/popup.html
+++ b/webextension/browser-action/popup.html
@@ -8,13 +8,13 @@
     <meta charset="UTF-8">
 
     <link rel="stylesheet" href="./css/ba-popup.css">
-    <link rel="stylesheet" href="../libs/FortAwesome/Font-Awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../libs/fontello-nc/css/netflix-categories.css">
     <link rel="stylesheet" href="./css/popup.css">
 </head>
 <body>
     <div class="search-view-container popup-dimensions">
         <div class="search-box search-box-with-icon">
-            <i class="fa fa-search search-input-icon"></i>
+            <i class="icon-search search-input-icon"></i>
             <input id="main-search-keyword-input" type="text" class="search-input" placeholder="Search Netflix Categories" autofocus/>
         </div>
         <div id="pinned-search-engines-list" class="main-pinned-box">
