Replace FontAwesome With Fontello Custom Icons
on all categories page

--- a/webextension/browser-action/popup-list-all-search-engines.html
+++ b/webextension/browser-action/popup-list-all-search-engines.html
@@ -5,7 +5,7 @@
 
     <link rel="stylesheet" href="./css/ba-popup.css">
     <link rel="stylesheet" href="./css/ba-all-categories.css">
-    <link rel="stylesheet" href="../libs/FortAwesome/Font-Awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../libs/fontello-nc/css/netflix-categories.css">
 
     <script type="text/javascript" src="../libs/dov-utils.js"></script>
     <script type="text/javascript" src="../core/js/config.js"></script>
@@ -14,7 +14,7 @@
 <body>
 <div class="popup-dimensions">
     <div class="app-nav-box">
-        <a href="popup.html" style="font-size: medium;" class="app-nav-item"><i class="fa fa-chevron-left"></i>&nbsp; BACK</a>
+        <a href="popup.html" style="font-size: medium;" class="app-nav-item"><i class="icon-left-open"></i>&nbsp; BACK</a>
     </div>
 
     <div class="main-pinned-box below-back-btn" id="accordion">
