Style Changelog Footer With Border, Cursor and BG Colors

--- a/webextension/browser-action/popup.html
+++ b/webextension/browser-action/popup.html
@@ -21,7 +21,7 @@
             <!-- Dynamically added nodes -->
         </div>
 
-        <footer>
+        <footer id="changelog-link">
             Updated! Whats new?
         </footer>
     </div>
